--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,19 +1,19 @@
-name: "Feature Request"
-description: "Suggest a new feature or enhancement."
-title: "[Feature Request]: "
+name: Feature Request
+description: Suggest a new feature or enhancement.
+title: "Use this template to suggest a feature."
 labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
       value: |
-        ## Feature Request
         Please provide a detailed description of the feature you would like to see. Include as much detail as possible to help us understand your request.
   - type: input
     id: feature-summary
     attributes:
-      label: "Feature Summary **(required)**"
+      label: "Summary **(required)**"
       description: "Provide a brief summary of the feature."
       placeholder: "A short summary of the feature."
+    validations:
       required: true
   - type: textarea
     id: detailed-description
@@ -21,6 +21,7 @@ body:
       label: "Detailed Description **(required)**"
       description: "Describe the feature in detail, including why it would be useful and how it should work."
       placeholder: "Provide a detailed description of the feature."
+    validations:
       required: true
   - type: textarea
     id: use-cases
@@ -28,6 +29,7 @@ body:
       label: "Use Cases **(required)**"
       description: "Describe specific use cases or scenarios where this feature would be beneficial."
       placeholder: "Provide specific use cases or scenarios."
+    validations:
       required: true
   - type: input
     id: alternatives
@@ -35,11 +37,9 @@ body:
       label: "Alternatives"
       description: "Describe any alternative solutions or features you've considered."
       placeholder: "Describe any alternative solutions or features."
-      required: false
   - type: input
     id: additional-context
     attributes:
       label: "Additional Context"
       description: "Provide any other context or screenshots about the feature request."
       placeholder: "Additional context or screenshots."
-      required: false
