--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -10,7 +10,7 @@ body:
   - type: input
     id: feature-summary
     attributes:
-      label: "Summary **(required)**"
+      label: "Summary"
       description: "Provide a brief summary of the feature."
       placeholder: "A short summary of the feature."
     validations:
@@ -18,7 +18,7 @@ body:
   - type: textarea
     id: detailed-description
     attributes:
-      label: "Detailed Description **(required)**"
+      label: "Detailed Description"
       description: "Describe the feature in detail, including why it would be useful and how it should work."
       placeholder: "Provide a detailed description of the feature."
     validations:
@@ -26,7 +26,7 @@ body:
   - type: textarea
     id: use-cases
     attributes:
-      label: "Use Cases **(required)**"
+      label: "Use Cases"
       description: "Describe specific use cases or scenarios where this feature would be beneficial."
       placeholder: "Provide specific use cases or scenarios."
     validations:
