--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,42 +12,42 @@ body:
   - type: input
     id: summary
     attributes:
-      label: "Summary **(required)**"
-      description: Provide a general summary of the issue.
-      placeholder: A short summary of the bug.
+      label: "Summary"
+      description: "Provide a general summary of the issue."
+      placeholder: "A short summary of the bug."
     validations:
       required: false
   - type: textarea
     id: steps-to-reproduce
     attributes:
-      label: "Steps to Reproduce **(required)**"
-      description: Describe the steps to reproduce the issue.
+      label: "Steps to Reproduce"
+      description: "Describe the steps to reproduce the issue."
       placeholder: "1. Go to...\n2. Click on...\n3. Scroll down to...\n4. See error..."
     validations:
       required: true
   - type: input
     id: demo-link
     attributes:
-      label: "Demo Link **(required)**"
+      label: "Demo Link"
       description: "Provide a link to a demo on [CodeSandbox](https://codesandbox.io/) or [StackBlitz](https://stackblitz.com/) that reproduces the issue.\nYou can fork from an existing [Preline](https://preline.co/docs/frameworks.html) demo if needed."
-      placeholder: URL to the demo
+      placeholder: "URL to the demo"
     validations:
       required: false
   - type: textarea
     id: expected-behavior
     attributes:
-      label: Expected Behavior
-      description: Describe what you expected to happen.
-      placeholder: Describe the expected behavior.
+      label: "Expected Behavior"
+      description: "Describe what you expected to happen."
+      placeholder: "Describe the expected behavior."
   - type: textarea
     id: actual-behavior
     attributes:
-      label: Actual Behavior
-      description: Describe what actually happened.
-      placeholder: Describe the actual behavior.
+      label: "Actual Behavior"
+      description: "Describe what actually happened."
+      placeholder: "Describe the actual behavior."
   - type: textarea
     id: screenshots
     attributes:
-      label: Screenshots
-      description: Attach any screenshots that may help explain the problem. You can upload your screenshots to an image hosting service or drag and drop them directly into a GitHub comment, and then provide the link here.
-      placeholder: URL to screenshots
+      label: "Screenshots"
+      description: "Attach any screenshots that may help explain the problem. You can upload your screenshots to an image hosting service or drag and drop them directly into a GitHub comment, and then provide the link here."
+      placeholder: "URL to screenshots"
