Github. Add issue validation. Test.

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,12 +1,12 @@
 name: Report a bug
 description: Please provide a clear and concise description of the problem.
-labels: ["bug"]
-assignees:
-  - olegpix
+title: "[Bug]: "
 body:
   - type: markdown
     attributes:
       value: |
+        ## Bug Report
+
         Thanks for taking the time to fill out this bug report!
   - type: input
     id: summary
