--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,10 +1,12 @@
 name: Feature Request
 description: Suggest a new feature or enhancement.
-labels: ["enhancement"]
+title: "[Feature Request]: "
 body:
   - type: markdown
     attributes:
       value: |
+        ## Feature Request
+
         Please provide a detailed description of the feature you would like to see. Include as much detail as possible to help us understand your request.
   - type: input
     id: feature-summary
