Github. Add issue validation. Test.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Bug Report
-    url: https://github.com/olegpix/test-github-validation/issues/new?template=bug_report.yml
-    about: Use this template to report a bug.
-  - name: Feature Request
-    url: https://github.com/olegpix/test-github-validation/issues/new?template=feature_request.yml
-    about: Suggest a new feature or enhancement.
+  - name: "Report a Bug"
+    url: "https://github.com/olegpix/test-github-validation/issues/new?template=bug_report.yml"
+    about: "Use this template to report a bug."
+  - name: "Feature Request"
+    url: "https://github.com/olegpix/test-github-validation/issues/new?template=feature_request.yml"
+    about: "Suggest a new feature or enhancement."
